Major improvements: Remove premature stopping, discover optimal parameters
- Remove premature stopping logic that was hiding true performance
- Discover merge_power=2.40 is optimal (10,538 mean reward vs 4,238)
- Achieve 256 tile milestone for first time
- Add comprehensive analysis scripts and documentation
- Clean up codebase by removing unused files
- Update .gitignore to prevent future clutter
- All configurations now train for full duration with equal sample sizes

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,18 @@ reward_sweep_summary.csv
 reward_sweep_top_learning_curves.html
 /dqn_2048_model/
 
+# Training artifacts
+tensorboard/
+checkpoints/
+*.zip
+sweep_*_init.zip
+dqn_*_sb3.zip
+
+# Analysis artifacts
+reward_sweep_analysis.png
+profile_stats
+*.html
+
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
